[package]
name = "mind-corner"
version = "0.1.0"
edition = "2021"
description = "Simple CLI app for mental health activities."
authors = ["Mateusz Kuniczuk <mateusz.kuniczuk@gmail.com>"]
license = "MIT"

[dependencies]
chrono = "0.4.38"
inquire = "0.7.5"
csv = "1.3.0"
serde = { version = "1.0.205", features = ["derive"] }
log = "0.4.22"
