[package]
name = "mind-corner"
version = "0.5.0"
edition = "2021"
description = "Simple CLI app for mental health activities."
authors = ["Mateusz Kuniczuk <mateusz.kuniczuk@gmail.com>"]
license = "MIT"

[dependencies]
chrono = "0.4.38"
inquire = { version = "0.7.5", features = ["editor"] }
csv = "1.3.0"
serde = { version = "1.0.205", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
polars = { version = "0.46.0", features = ["lazy", "performant"] }
rand = "0.9.0"
