[package]
name = "mind-corner"
version = "1.0.0"
edition = "2021"
description = "A CLI app for mental health activities."
authors = ["Mateusz Kuniczuk <mateusz.kuniczuk@gmail.com>"]
license = "MIT"

[dependencies]
chrono = "0.4.40"
inquire = { version = "0.7.5", features = ["editor"] }
csv = "1.3.1"
serde = { version = "1.0.205", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
polars = { version = "0.46.0", features = ["lazy", "performant"] }
rand = "0.9.0"
rstest = "0.25.0"
indicatif = "0.17.11"
